# RS-Side-Scroller

./: .gitignore  README.md
build-side-scroller-Desk-Debug/: Makefile  moc_mainwindow.cpp  side-scroller
side-scroller/: .clang-format  Babe.cpp  Babe.h  Block.cpp  Block.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyFinalBoss.cpp  EnemyFinalBoss.h  EnemyPickman.cpp  EnemyPickman.h  EnemyProjectile.cpp  EnemyProjectile.h  EnemySniperJoe.cpp  EnemySniperJoe.h  Entity.cpp  Entity.h  FinalBossBullet1.cpp  FinalBossBullet1.h  FinalBossBullet2.cpp  FinalBossBullet2.h  Game.cpp  Game.h  HealthBar.cpp  HealthBar.h  Inert.cpp  Inert.h  LevelManager.cpp  LevelManager.h  Levelmanager.cpp  Levelmanager.h  Object.cpp  Object.h  Pickaxe.cpp  Pickaxe.h  (+25 more)
side-scroller/Levels/: level.txt
